letter-spacing fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -408,6 +408,7 @@ $Arial: 'Arial', sans-serif;
                 }
 
                 a {
+                    letter-spacing: 0.8px;
                     margin-right: 15px;
                     display: flex;
                     align-items: center;
@@ -433,7 +434,9 @@ $Arial: 'Arial', sans-serif;
                     display: flex;
                     align-items: center;
                     gap: 44px;
-
+                    a{
+                        letter-spacing: 0.52px;
+                    }
                     li {
                         position: relative;
 
@@ -698,6 +701,7 @@ $Arial: 'Arial', sans-serif;
             }
 
             .card_btn {
+                letter-spacing: 0.7px;
                 opacity: 0;
                 transition: .3s linear;
                 position: absolute;
@@ -782,6 +786,7 @@ $Arial: 'Arial', sans-serif;
 
             .about_top_left {
                 h3 {
+                    letter-spacing: 1.92px;
                     padding-bottom: 16px;
                     max-width: 325px;
                     font-size: 48px;
@@ -793,6 +798,7 @@ $Arial: 'Arial', sans-serif;
                 }
 
                 p {
+                    letter-spacing: 0.68px;
                     max-width: 790px;
                     font-size: 17px;
                     font-weight: 400;
@@ -835,6 +841,7 @@ $Arial: 'Arial', sans-serif;
                     align-items: center;
 
                     span {
+                        letter-spacing: 2.44px;
                         font-size: 60px;
                         font-weight: bold;
                         font-family: $Bahnschrift;
@@ -842,6 +849,7 @@ $Arial: 'Arial', sans-serif;
                     }
 
                     h4 {
+                        letter-spacing: 0.64px;
                         max-width: 280px;
                         font-size: 16px;
                         font-weight: bold;
@@ -894,6 +902,7 @@ $Arial: 'Arial', sans-serif;
     background-size: cover;
 
     h2 {
+        letter-spacing: 1.92px;
         padding-top: 357px;
         text-align: center;
         font-size: 48px;
@@ -1091,6 +1100,7 @@ $Arial: 'Arial', sans-serif;
     }
 
     .dealers_title {
+        letter-spacing: 1.84px;
         text-align: center;
         font-size: 46px;
         font-weight: bold;
@@ -1132,6 +1142,7 @@ $Arial: 'Arial', sans-serif;
             }
 
             h4 {
+                letter-spacing: 0.96px;
                 margin-top: 23px;
                 font-size: 24px;
                 font-weight: 500;
@@ -1141,6 +1152,7 @@ $Arial: 'Arial', sans-serif;
             }
 
             p {
+                letter-spacing: 0.64px;
                 font-family: $Bahnschrift;
                 font-weight: light;
                 max-width: 327px;
